update ignore list (files in .metadata)

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,30 @@ local.properties
 # Eclipse project files
 .classpath
 .project
+.metadata/version.ini
+.metadata/.log
+.metadata/.lock
+.metadata/.plugins/org.eclipse.cdt.core/.log
+.metadata/.plugins/org.eclipse.cdt.make.core/specs.cpp
+.metadata/.plugins/org.eclipse.cdt.make.core/specs.c
+.metadata/.plugins/org.eclipse.core.resources/.snap
+.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/.syncinfo.snap
+.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/.markers.snap
+.metadata/.plugins/org.eclipse.core.resources/.root/.markers.snap
+.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
+.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.wst.sse.core.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.rse.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.rse.core.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jdt.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.core.resources.prefs
+.metadata/.plugins/org.eclipse.dltk.core/Containers.dat
+.metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
+.metadata/.plugins/org.eclipse.rse.core/.log
+.metadata/.plugins/org.eclipse.rse.core/initializerMarks/org.eclipse.rse.internal.core.RSELocalConnectionInitializer.mark
+.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.macmini_0/node.properties
+.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.macmini_0/FP.local.files_0/node.properties
+.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.macmini_0/H.local_16/node.properties
+.metadata/.plugins/org.eclipse.rse.ui/.log
+.metadata/.plugins/org.eclipse.ui.workbench/workingsets.xml
