--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,9 @@ bin/
 gen/
 
 # Local configuration file (sdk path, etc)
-local.properties
+# local.properties
 
 # Eclipse project files
-.classpath
-.project
 .metadata/version.ini
 .metadata/.log
 .metadata/.lock
