#1 modify project settings (link to libraries LocusAPI, LocusAPI_android, OpenWIG)

--- a/android-whereyougo/.classpath
+++ b/android-whereyougo/.classpath
@@ -4,11 +4,14 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/LocusAPI"/>
-	<classpathentry exported="true" kind="lib" 
-	    path="/Applications/eclipse/android-sdk-macosx/extras/android/support/v4/android-support-v4.jar" 
-		sourcepath="/Applications/eclipse/android-sdk-macosx/extras/extras/android/support/v4/src"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/LocusAPI">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="LocusAPI/src"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="/Applications/eclipse/android-sdk-macosx/extras/android/support/v4/android-support-v4.jar" sourcepath="/Applications/eclipse/android-sdk-macosx/extras/extras/android/support/v4/src"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/LocusAPI_android"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
