--- a/android-whereyougo/.project
+++ b/android-whereyougo/.project
@@ -34,12 +34,12 @@
 		<link>
 			<name>LocusAPI</name>
 			<type>2</type>
-			<location>/Applications/eclipse/Eclipse.app/Contents/MacOS/C::/menion/Locus/LocusAPI/src</location>
+			<locationURI>LocusAPI/src</locationURI>
 		</link>
 		<link>
 			<name>OpenWIG</name>
 			<type>2</type>
-			<location>/Applications/eclipse/Eclipse.app/Contents/MacOS/C::/menion/projects/openwig/OpenWIGLibrary/src</location>
+			<location>/Users/andreas/YAAWP/openwig/OpenWIGLibrary/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
