--- a/android-whereyougo/project.properties
+++ b/android-whereyougo/project.properties
@@ -13,5 +13,5 @@
 # Indicates whether an apk should be generated for each density.
 split.density=false
 # Project target.
-target=android-17
-android.library.reference.1=../../Locus/LocusAPI_android
+target=android-10
+android.library.reference.1=../LocusAPI_android
