--- a/android-whereyougo/AndroidManifest.xml
+++ b/android-whereyougo/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="menion.android.whereyougo"
+	package="org.yaawp"
 	android:versionCode="25"
 	android:versionName="0.7.0"
 	android:installLocation="auto">
