--- a/android-whereyougo/AndroidManifest.xml
+++ b/android-whereyougo/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.yaawp"
-	android:versionCode="25"
-	android:versionName="0.7.0"
+	android:versionCode="1"
+	android:versionName="Release-1"
 	android:installLocation="auto">
 	
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
