--- a/android-whereyougo/.classpath
+++ b/android-whereyougo/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LocusAPI_android"/>
+	<classpathentry exported="true" kind="lib" path="/Users/andreas/workspaces/yaawp/libs/mapsforge-map-0.3.0-jar-with-dependencies.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
