[refactor] move and rename SatelliteScreen

--- a/android-whereyougo/AndroidManifest.xml
+++ b/android-whereyougo/AndroidManifest.xml
@@ -95,7 +95,7 @@
 			android:name="menion.android.whereyougo.guiding.GuidingScreen"
 			android:screenOrientation="portrait" />
 		<activity
-			android:name="menion.android.whereyougo.gui.location.SatelliteScreen"
+			android:name="org.yaawp.hmi.activities.SatelliteScreenActivity"
 			android:screenOrientation="portrait" />
 		<activity
 			android:name="menion.android.whereyougo.gui.SettingScreens"
