[refactor] move and rename CartridgeMainMenu

--- a/android-whereyougo/AndroidManifest.xml
+++ b/android-whereyougo/AndroidManifest.xml
@@ -55,7 +55,7 @@
 			android:name="menion.android.whereyougo.gui.CartridgeDetails"
 			android:screenOrientation="portrait"/>
 		<activity
-			android:name="menion.android.whereyougo.gui.CartridgeMainMenu"
+			android:name="org.yaawp.hmi.activities.CartridgeMainMenu"
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait"/>
 		<activity
