--- a/android-whereyougo/.project
+++ b/android-whereyougo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WhereYouGo</name>
+	<name>Yaawp</name>
 	<comment></comment>
 	<projects>
 	</projects>
