--- a/android-whereyougo/AndroidManifest.xml
+++ b/android-whereyougo/AndroidManifest.xml
@@ -25,7 +25,7 @@
     	android:smallScreens="true"
  		android:anyDensity="true" />
 
-	<application android:icon="@drawable/icon"
+	<application android:icon="@drawable/ic_launcher"
 		android:label="Yaawp"
 		android:name="menion.android.whereyougo.gui.extension.MainApplication" >
 	
