--- a/android-whereyougo/AndroidManifest.xml
+++ b/android-whereyougo/AndroidManifest.xml
@@ -108,7 +108,7 @@
 		<activity
 		    android:name="org.yaawp.maps.mapsforge.CartridgeMapActivity"
 		    android:screenOrientation="portrait" />		
-		<service android:name="menion.android.whereyougo.hardware.location.GpsConnectionService" />
+		<service android:name="org.yaawp.positioning.GpsConnectionService" />
 		<service android:name="org.yaawp.audio.AudioPlayService" />
 		
 	</application>
