--- a/yaawp/AndroidManifest.xml
+++ b/yaawp/AndroidManifest.xml
@@ -55,6 +55,9 @@
 			android:name="org.yaawp.hmi.activities.CartridgeDetailsActivity"
 			android:screenOrientation="portrait"/>
 		<activity
+			android:name="org.yaawp.hmi.activities.AppInfoActivity"
+			android:screenOrientation="portrait"/>		
+		<activity
 			android:name="org.yaawp.hmi.activities.WigMainMenuActivity"
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait"/>
